Lower hero tabs, fix sign-up button click on small screens

--- a/src/features/auth/Account.css
+++ b/src/features/auth/Account.css
@@ -535,9 +535,11 @@ form.sign-up-form {
 
   .signin-signup {
     width: 100%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    top: auto;
+    bottom: 0;
+    transform: translate(-50%, 0);
     transition: 1s 0.8s ease-in-out;
+    padding-bottom: 2rem;
   }
 
   .signin-signup,
